--- a/Wap/Home/View/Index/dubang.html
+++ b/Wap/Home/View/Index/dubang.html
@@ -14,8 +14,9 @@
         </div>
         <div id="container" style="width: 320px;height:500px;"></div>
     </center>
+<div style="background: red;width:20%;height:400px;position: absolute;top:200px;filter:alpha(opacity=0);  -moz-opacity:0;  -khtml-opacity: 0;  opacity: 0; "></div>
+<div style="background: red;width:20%;height:400px;position: absolute;top:200px;right: 10px;filter:alpha(opacity=0);  -moz-opacity:0;  -khtml-opacity: 0;  opacity: 0; "></div>
 <!--透明遮罩层-->
-<!--<div style="background: red;width:100%;height:370px;position: absolute;top:200px;filter:alpha(opacity=0);  -moz-opacity:0;  -khtml-opacity: 0;  opacity: 0; "></div>-->
   <script>
     //股东回报率的数值
     var month1 = Number({$result['0']['month']});
