--- a/Admin/Home/View/Common/dispatch_jump.html
+++ b/Admin/Home/View/Common/dispatch_jump.html
@@ -21,22 +21,19 @@
             }
             .box {
                 margin: 100px auto;
-                width: 600px;
+                width: 550px;
                 background: #fff;
                 -webkit-border-radius: 5px;
                 -moz-border-radius: 5px;
                 border-radius: 5px;
                 border: 1px solid #ccc;
                 padding: 10px;
-                box-shadow: inset 0 0 3px #eee;
                 min-height:150px;
             }
             .system-message { padding: 12px 24px; min-height:200px; }
-            .system-message h1 {
-                font-size: 36px;
+            .system-message h3 {
                 line-height: 40px;
                 margin-bottom: 12px;
-                text-shadow: 0 0 5px #9FB1BF;
                 border-bottom:1px solid #ddd;
                 padding-bottom:10px;
             }
@@ -59,10 +56,10 @@
         <div class="box">
             <div class="system-message">
                 <present name="message">
-                    <h1>Oh Yeah,操作成功！</h1>
+                    <h3><font color='#0075C1'>操作成功！</font></h3>
                     <p class="success"><?php echo($message); ?></p>
                     <else/>
-                    <h1>Oh My God,操作失败！</h1>
+                    <h3><font color='red'>操作失败！</font></h3>
                     <p class="error"><?php echo($error); ?></p>
                 </present>
                 <p class="detail"></p>                
