This is a commit

--- a/Index/Home/View/Dubang/index.html
+++ b/Index/Home/View/Dubang/index.html
@@ -23,7 +23,7 @@
     <tbody>
         <tr>
             <td align="center">股东回报率</td>
-            <td align="center">{$du['1']['lei']}</td>
+            <td align="center">{$du['1']['yue']}</td>
             <td align="center">{$oldGudong}</td>
             <td align="center" class="edit" did ="{$dubang['0']['id']}" name='股东回报率'>{$dubang['0']['target']}</td>
             <td style="display: none;">{$dubang['0']['id']}</td>
@@ -61,7 +61,7 @@
     <div class="gudongLv">
         <div class="gudongTop">
             <div class="gudongName">股东回报率<br/><span class="kuohao">（ROE）</span></div>
-            <div class="gudongData">{$du['1']['lei']}</div>
+            <div class="gudongData">{$du['1']['yue']}</div>
         </div>
     </div>
     <div class="oneLine">
@@ -97,71 +97,71 @@
             <li class="sixteenOne">
                 <div class="zhuying1">
                     <div class="sixteenName1">主营业务质量</div>
-                    <div class="sixteenData">{$du['0']['lei']}</div>
+                    <div class="sixteenData">{$du['0']['yue']}</div>
                 </div>
                 <div class="zhuying1">
                     <div class="sixteenName1">销售管理水平</div>
-                    <div class="sixteenData">{$du['2']['lei']}</div>
+                    <div class="sixteenData">{$du['2']['yue']}</div>
                 </div>
                 <div class="zhuying1">
                     <div class="sixteenName1">成本管理水平</div>
-                    <div class="sixteenData">{$du['4']['lei']}</div>
+                    <div class="sixteenData">{$du['4']['yue']}</div>
                 </div>
                 <div class="zhuying1">
                     <div class="sixteenName2">经营负担</div>
-                    <div class="sixteenData">{$du['3']['lei']}</div>
+                    <div class="sixteenData">{$du['3']['yue']}</div>
                 </div>
             </li>
             <li class="sixteenTwo">
                 <div class="zhuying1">
                     <div class="sixteenName1">运营资产回报率</div>
-                    <div class="sixteenData">{$du['5']['lei']}</div>
+                    <div class="sixteenData">{$du['5']['yue']}</div>
                 </div>
                 <div class="zhuying1">
                     <div class="sixteenName1">信用管理能力</div>
-                    <div class="sixteenData">{$du['7']['lei']}</div>
+                    <div class="sixteenData">{$du['7']['yue']}</div>
                 </div>
                 <div class="zhuying1">
                     <div class="sixteenName1">销售管理质量</div>
-                    <div class="sixteenData">{$du['9']['lei']}</div>
+                    <div class="sixteenData">{$du['9']['yue']}</div>
                 </div>
                 <div class="zhuying1">
                     <div class="sixteenName2">产销平衡</div>
-                    <div class="sixteenData">{$du['11']['lei']}</div>
+                    <div class="sixteenData">{$du['11']['yue']}</div>
                 </div>
                 <div class="zhuying1">
                     <div class="sixteenName1">应付账款控制</div>
-                    <div class="sixteenData">{$du['8']['lei']}</div>
+                    <div class="sixteenData">{$du['8']['yue']}</div>
                 </div>
                 <div class="zhuying1">
                     <div class="sixteenName3">固定资产的使用效率</div>
-                    <div class="sixteenData">{$du['12']['lei']}</div>
+                    <div class="sixteenData">{$du['12']['yue']}</div>
                 </div>
                 <div class="zhuying1">
                     <div class="sixteenName1">净现金的效能</div>
-                    <div class="sixteenData">{$du['13']['lei']}</div>
+                    <div class="sixteenData">{$du['13']['yue']}</div>
                 </div>
                 <div class="zhuying1">
                     <div class="sixteenName1">管理效率的质量</div>
-                    <div class="sixteenData">{$du['10']['lei']}</div>
+                    <div class="sixteenData">{$du['10']['yue']}</div>
                 </div>
                 <div class="zhuying1">
                     <div class="sixteenName1">资产盈利能力</div>
-                    <div class="sixteenData">{$du['6']['lei']}</div>
+                    <div class="sixteenData">{$du['6']['yue']}</div>
                 </div>
             </li>
             <li class="sixteenThree">
                 <div class="zhuying1">
                     <div class="sixteenName1">外部资产利用率</div>
-                    <div class="sixteenData">{$du['14']['lei']}</div>
+                    <div class="sixteenData">{$du['14']['yue']}</div>
                 </div>
                 <div class="zhuying1">
                     <div class="sixteenName3">净现金对负债的承受率</div>
-                    <div class="sixteenData">{$du['16']['lei']}</div>
+                    <div class="sixteenData">{$du['16']['yue']}</div>
                 </div>
                 <div class="zhuying1">
                     <div class="sixteenName3">流动资产对负债的承受率</div>
-                    <div class="sixteenData">{$du['15']['lei']}</div>
+                    <div class="sixteenData">{$du['15']['yue']}</div>
                 </div>
             </li>
         </ul>
