--- a/Wap/Home/View/Index/dubang.html
+++ b/Wap/Home/View/Index/dubang.html
@@ -39,6 +39,7 @@
     //Javascript代码
     $(function () {
     highchartsxy (month1,lastMonth1,target1,month2,lastMonth2,target2,month3,lastMonth3,target3);
+      $('.j_btn').css('color','#fff');
  
 });
 
