--- a/Wap/Home/View/Index/index1.html
+++ b/Wap/Home/View/Index/index1.html
@@ -56,12 +56,12 @@
 <script>
     $(function () {
 
-        var before = {$benqijinglirun};
-                var after1 = {$after1};
-                var after2 = {$after2};
-                var after3 = {$after3};
-                var after4 = {$after4};
-                var after5 = {$after5};
+        var before = parseInt("{$benqijinglirun}");
+                var after1 = parseInt("{$after1}");
+                var after2 = parseInt("{$after2}");
+                var after3 = parseInt("{$after3}");
+                var after4 = parseInt("{$after4}");
+                var after5 = parseInt("{$after5}");
 
         highchartsNet(before, after1, after2, after3, after4, after5);
 
