--- a/Wap/Home/View/Index/price.html
+++ b/Wap/Home/View/Index/price.html
@@ -15,7 +15,7 @@
             <a class="j_btn on" id="a_2"   href="javascript:void(0)" onClick="selectmonth2(2, this, url)">本月</a>
         </div>
         <div style="background-color: #fff;width: 320px;height: 60px;">
-            <input type="text" id="change" name="change" value="{$change}"/>
+            <input type="text" id="change" name="change" value="{$change}"/>&nbsp;%
             <a class="btn submit" onClick="update()">提交</a>
         </div>
         <div  id="container" style="background-color: #fff;width: 320px;">
